--- a/contact.html
+++ b/contact.html
@@ -19,4 +19,27 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
-	</header>
+	</header>	
+	
+	<div class="content">
+			
+			<div class="main">
+				<h1 class="page-title">Contact</h1>
+				<form action="#" class="contact">
+					<label for="name">Name</label>
+					<input type="text" name="name" id="name" placeholder="John Smith">
+					<label for="email">Email</label>
+					<input type="text" name="email" id="email" placeholder="example@gmail.com">
+					<label for="name">Message</label>
+					<textarea rows="10" cols="40" name="message" id="message"></textarea>
+					<input type="submit" value="Submit">
+				</form>
+			</div>	
+				
+	</div>
+	<footer>
+			&copy; Copyright 2019 Mohamed Adan
+		</footer>
+
+</body>
+</html>
