--- a/portfolio.html
+++ b/portfolio.html
@@ -27,31 +27,27 @@
 				<ul class="portfolio">
 					<li class="portfolio-item">
 						<a href="#">
-							<img src="https://placekitten.com/270/200" alt="Hangman Image">
+							
 							<h2 class="item-name">Hangman</h2>
 						</a>
 					</li>
 					<li class="portfolio-item">
 						<a href="#">
-							<img src="https://placekitten.com/270/200" alt="RPG Game Image">
 							<h2 class="item-name">RPG Game</h2>
 						</a>
 					</li>
 					<li class="portfolio-item">
 						<a href="#">
-							<img src="https://placekitten.com/270/200" alt="Trivia Game Image">
 							<h2 class="item-name">Trivia Game</h2>
 						</a>
 					</li>
 					<li class="portfolio-item">
 						<a href="#">
-							<img src="https://placekitten.com/270/200" alt="Rutgers Info Widget Image">
 							<h2 class="item-name">Rutgers Info Widget</h2>
 						</a>
 					</li>
 					<li class="portfolio-item">
 						<a href="#">
-							<img src="https://placekitten.com/270/200" alt="Rock Paper Scissors Image">
 							<h2 class="item-name">Rock Paper Scissors</h2>
 						</a>
 					</li>
@@ -62,3 +58,4 @@
 			&copy; Copyright 2019 Mohamed Adan
 		</footer>	
 </body>
+</html>
